# zwebhook-tester-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  do-app-spec.yaml  docker-compose.yml  entrypoint.sh  test-webhooks.sh
frontend/: index.html  logs-new.html  logs.html  test-webhooks.html
frontend/js/: analytics.js  app.js  search.js  ui.js  websocket.js
src/: main.rs  routes.rs  storage.rs  websocket.rs
