[package]
name = "zwebhook-tester-rs"
version = "0.1.0"
edition = "2021"
description = "A webhook testing tool with transparent proxying capabilities"

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
axum = { version = "0.6.20", features = ["macros", "ws"] }
tower-http = { version = "0.4.4", features = ["fs", "cors", "trace"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
socket2 = "0.5.5"
tokio-tungstenite = "0.20.1"

futures = "0.3.29"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
hex = "0.4.3"
once_cell = "1.18.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
libc = "0.2.151"
rand = "0.8.5"
